--- a/public/scripts/style.css
+++ b/public/scripts/style.css
@@ -181,7 +181,7 @@ header .barraMenu .barraMenu_elementos a {
       -ms-flex-pack: justify;
           justify-content: space-between;
   background-image: url(/public/img/bannerExtrawowMuffins.png);
-  background-color: red;
+  background-color: gray;
 }
 
 .contenedorContenido .primeraCategoria .bannerC p {
@@ -204,7 +204,6 @@ header .barraMenu .barraMenu_elementos a {
   padding-left: 9%;
   padding-right: 9%;
   padding-top: 2em;
-  background-color: blue;
 }
 
 .contenedorContenido .contenedorElementos .elemento {
@@ -221,7 +220,6 @@ header .barraMenu .barraMenu_elementos a {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-color: yellow;
   margin-left: 1%;
   margin-right: 1%;
   margin-top: 3em;
@@ -230,7 +228,6 @@ header .barraMenu .barraMenu_elementos a {
 }
 
 .contenedorContenido .contenedorElementos .elemento img {
-  background-color: purple;
   width: 35%;
   height: auto;
 }
@@ -528,7 +525,7 @@ footer .contenedorNews .contenedorInputs button {
   display: flex;
   width: 100%;
   height: auto;
-  background-color: blue;
+  background-color: darkgray;
 }
 
 #contenedorCarrito #menuCarrito .contenedorIzquierda {
@@ -547,7 +544,6 @@ footer .contenedorNews .contenedorInputs button {
 
 #contenedorCarrito #menuCarrito .contenedorIzquierda .elementosCar {
   width: 100%;
-  background-color: red;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -580,7 +576,7 @@ footer .contenedorNews .contenedorInputs button {
 }
 
 #contenedorCarrito #menuCarrito .contenedorBanner {
-  background-color: yellow;
+  background-color: gray;
   width: 40%;
 }
 /*# sourceMappingURL=style.css.map */
