--- a/public/scripts/style.scss
+++ b/public/scripts/style.scss
@@ -235,7 +235,7 @@ header{
         padding-left: 9%;
         padding-right: 9%;
         padding-top: 2em;
-        background-color:lightgray;
+       // background-color:lightgray;
         
         
       
@@ -247,7 +247,7 @@ header{
             flex-direction: column;            
             justify-content: center;
             align-items: center;
-            background-color: rgb(231, 231, 231);
+          //  background-color: rgb(231, 231, 231);
 
           
 
