Arreglé eñ Handlebars (alegría máxima)

--- a/views/ultcolec.handlebars
+++ b/views/ultcolec.handlebars
@@ -47,7 +47,7 @@
         <a href="#">
 
                 <div class="logoPrinci">
-                    <img src="/public/img/logoPrinci.png">
+                    <img src="/Data/logoPrinci.png">
                 </div>
             </a>
         </div>
@@ -86,6 +86,8 @@
 
         </div>
 
+
+
         <div class="primeraCategoria">
             <div class="bannerC">
              <p><b>Extrawow Muffins</b></p>    
@@ -106,54 +108,11 @@
                 </div>
             </div>
         -->
-                <div class="elemento">
-
-                    {{#each products}}
-                    
-                    <img src ='{{img}}'>
-
-                    <div class="textosElem">
-                    <p>
-                    <b>{{nombre}}</b>
-                    <br>
-                    {{precio}}$ USD
-                    </p>
-                    </div>
-
-                    {{/each}}
-
-                </div>         
-     
-        </div>
-            </div>
-
-
-
-
-            <div class="primeraCategoria">
-                    <div class="bannerC">
-                     <p><b>Extrawow Muffins</b></p>    
-                     <button>-</button>
-                     </div>
                 
-        
-        <div class="contenedorElementos">
-
-        <!--    <div class="elemento">
-                <img src={{img}}>
-                <div class="textosElem">
-                    <p>
-                        <b>{{nombre}}</b>
-                        <br>
-                        {{precio}} USD
-                    </p>
-                </div>
-            </div>
-        
-                <div class="elemento">
 
                     {{#each products}}
                     
+                    <div class="elemento">
                     <img src ='{{img}}'>
 
                     <div class="textosElem">
@@ -163,16 +122,21 @@
                     {{precio}}$ USD
                     </p>
                     </div>
+                    </div> 
 
                     {{/each}}
 
-                </div>         
+                        
      
         </div>
-                    </div>
-                    -->
+            </div>
 
-        </div>
+
+
+
+            
+        
+       
         
    
 
@@ -180,7 +144,7 @@
 
 
           
-  
+<!--  
 <div id="contenedorPopUp">
     <div id="menuPopUp">
         <style>
@@ -218,9 +182,9 @@
             </div>
             </div>
         </div>
+-->
 
-
-
+    </div>
 
 
 
